fix performance Benchmarking and serialisation tests and updae docs